# dpdkrs-demo

./: Cargo.toml  README.md  build.rs  config.ini
src/: client.rs  client_reqwest.rs  server.rs
