[package]
edition = "2021"
name = "dpdkrs-demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
dpdk-io = {version = "0.1.1", git = "https://github.com/hft-team/dpdk-io"}
env_logger = "0.10.0"
futures-util = {version = "0.3", default-features = false, features = ["alloc"]}
http-body-util = "0.1.0-rc.2"
hyper = {path = "../hyper", features = ["full", "dpdk"]}
log = "0.4.17"
matches = "0.1"
num_cpus = "1.0"
pretty_env_logger = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
spmc = "0.3"
tokio = {version = "1.25.0", features = ["full"]}
tokio-util = {version = "0.7", features = ["codec"]}
tower = {version = "0.4", features = ["make", "util"]}
url = "2.2"

[build-dependencies]
pkg-config = "0.3.26"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
